--- a/WeatherApp/View/CityWeatherCell/CityWeatherCell.xib
+++ b/WeatherApp/View/CityWeatherCell/CityWeatherCell.xib
@@ -11,14 +11,70 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CityWeatherCell" id="KGk-i7-Jjw" customClass="CityWeatherCell" customModule="WeatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CityWeatherCell" rowHeight="272" id="KGk-i7-Jjw" customClass="CityWeatherCell" customModule="WeatherApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="326" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="326" height="271.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bc4-1o-nRV">
+                        <rect key="frame" x="88" y="11" width="150" height="120"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="CnC-hI-g6J"/>
+                            <constraint firstAttribute="height" constant="120" id="ubA-2y-mHr"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRU-Bu-8hx">
+                        <rect key="frame" x="88" y="139" width="150" height="20.5"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DD2-0m-QMn">
+                        <rect key="frame" x="88" y="167.5" width="150" height="77.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dsy-7g-WQq">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="20.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zg2-gq-LuA">
+                                <rect key="frame" x="0.0" y="28.5" width="150" height="20.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4P-wR-502">
+                                <rect key="frame" x="0.0" y="57" width="150" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="bc4-1o-nRV" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="2Cx-my-Le6"/>
+                    <constraint firstItem="DD2-0m-QMn" firstAttribute="leading" secondItem="RRU-Bu-8hx" secondAttribute="leading" id="BBz-tY-sTr"/>
+                    <constraint firstItem="RRU-Bu-8hx" firstAttribute="trailing" secondItem="bc4-1o-nRV" secondAttribute="trailing" id="DAD-X3-dLS"/>
+                    <constraint firstItem="bc4-1o-nRV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="MfM-Ov-3aj"/>
+                    <constraint firstItem="DD2-0m-QMn" firstAttribute="trailing" secondItem="RRU-Bu-8hx" secondAttribute="trailing" id="YY3-bp-vyf"/>
+                    <constraint firstItem="RRU-Bu-8hx" firstAttribute="leading" secondItem="bc4-1o-nRV" secondAttribute="leading" id="i7c-mf-9dn"/>
+                    <constraint firstItem="DD2-0m-QMn" firstAttribute="top" secondItem="RRU-Bu-8hx" secondAttribute="bottom" constant="8" id="p4w-Pe-q0q"/>
+                    <constraint firstItem="RRU-Bu-8hx" firstAttribute="top" secondItem="bc4-1o-nRV" secondAttribute="bottom" constant="8" id="vg0-eN-blA"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="averageTempLbl" destination="RRU-Bu-8hx" id="QvJ-4J-qLu"/>
+                <outlet property="cityNameLbl" destination="Dsy-7g-WQq" id="ySp-L4-Gk7"/>
+                <outlet property="todayDateLbl" destination="Z4P-wR-502" id="Gio-ME-NMv"/>
+                <outlet property="weatherImg" destination="bc4-1o-nRV" id="z0f-G2-mHR"/>
+                <outlet property="weatherOverviewLbl" destination="zg2-gq-LuA" id="Mm9-OD-e6K"/>
+            </connections>
+            <point key="canvasLocation" x="132.80000000000001" y="256.37181409295357"/>
         </tableViewCell>
     </objects>
 </document>
