--- a/WeatherApp/View/CityWeatherCell/CityWeatherCollectionCell.xib
+++ b/WeatherApp/View/CityWeatherCell/CityWeatherCollectionCell.xib
@@ -12,15 +12,104 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CityWeatherCollectionCell" id="gTV-IL-0wX" customClass="CityWeatherCollectionCell" customModule="WeatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="108" height="118"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="126"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="108" height="118"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="126"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OYQ-Bx-yzI">
+                        <rect key="frame" x="15" y="3" width="120" height="120"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="1Pe-GJ-aNZ">
+                                <rect key="frame" x="4" y="58" width="112" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="День" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rce-p2-AAv">
+                                        <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="791-Wt-HQk">
+                                        <rect key="frame" x="70" y="0.0" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="PFb-oV-dwt">
+                                <rect key="frame" x="4" y="91.5" width="112" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Ночь" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ZK-Rh-oAy">
+                                        <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ct4-ON-Cbg">
+                                        <rect key="frame" x="70" y="0.0" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rUf-yW-SPY">
+                                <rect key="frame" x="8" y="40" width="104" height="2"/>
+                                <color key="backgroundColor" red="0.60680587045131229" green="0.89061050548166187" blue="0.5259733816665908" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="C0x-vm-nnO"/>
+                                    <constraint firstAttribute="height" constant="2" id="Qam-pT-56x"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qtC-19-cIu">
+                                <rect key="frame" x="0.0" y="84.5" width="120" height="1"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="GWe-nD-nKZ"/>
+                                    <constraint firstAttribute="width" constant="120" id="GzE-tg-VYB"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="120" id="1SJ-Df-Fto"/>
+                            <constraint firstItem="1Pe-GJ-aNZ" firstAttribute="leading" secondItem="OYQ-Bx-yzI" secondAttribute="leading" constant="4" id="AKm-tb-GIx"/>
+                            <constraint firstItem="rUf-yW-SPY" firstAttribute="top" secondItem="OYQ-Bx-yzI" secondAttribute="top" constant="40" id="Jyv-d4-Z6v"/>
+                            <constraint firstItem="1Pe-GJ-aNZ" firstAttribute="centerX" secondItem="OYQ-Bx-yzI" secondAttribute="centerX" id="Q5r-Dp-NlE"/>
+                            <constraint firstItem="PFb-oV-dwt" firstAttribute="centerX" secondItem="OYQ-Bx-yzI" secondAttribute="centerX" id="QTg-o7-HCn"/>
+                            <constraint firstItem="1Pe-GJ-aNZ" firstAttribute="top" secondItem="rUf-yW-SPY" secondAttribute="bottom" constant="16" id="Wkr-Bb-5D4"/>
+                            <constraint firstAttribute="trailing" secondItem="PFb-oV-dwt" secondAttribute="trailing" constant="4" id="YWR-Vn-BoP"/>
+                            <constraint firstItem="qtC-19-cIu" firstAttribute="centerX" secondItem="OYQ-Bx-yzI" secondAttribute="centerX" id="b7b-wm-MXt"/>
+                            <constraint firstItem="PFb-oV-dwt" firstAttribute="top" secondItem="qtC-19-cIu" secondAttribute="bottom" constant="6" id="jps-5V-JME"/>
+                            <constraint firstItem="qtC-19-cIu" firstAttribute="top" secondItem="1Pe-GJ-aNZ" secondAttribute="bottom" constant="6" id="oFV-el-3Dg"/>
+                            <constraint firstAttribute="trailing" secondItem="1Pe-GJ-aNZ" secondAttribute="trailing" constant="4" id="pcT-le-Yk4"/>
+                            <constraint firstItem="PFb-oV-dwt" firstAttribute="leading" secondItem="OYQ-Bx-yzI" secondAttribute="leading" constant="4" id="qh0-q8-z4X"/>
+                            <constraint firstAttribute="width" constant="120" id="yaV-8g-VJD"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUI-p9-fgP">
+                        <rect key="frame" x="54" y="11" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstItem="OYQ-Bx-yzI" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="i9c-CE-Cfk"/>
+                <constraint firstItem="dUI-p9-fgP" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="jzV-d6-toZ"/>
+                <constraint firstItem="OYQ-Bx-yzI" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="x6t-JW-AAK"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="108" height="118"/>
-            <point key="canvasLocation" x="99.200000000000003" y="79.160419790104953"/>
+            <size key="customSize" width="150" height="126"/>
+            <connections>
+                <outlet property="dayLbl" destination="dUI-p9-fgP" id="dn0-2B-KQp"/>
+                <outlet property="dayTempLbl" destination="791-Wt-HQk" id="Vyh-P0-vCu"/>
+                <outlet property="nightTempLbl" destination="Ct4-ON-Cbg" id="kIk-qI-cgv"/>
+            </connections>
+            <point key="canvasLocation" x="132.80000000000001" y="82.758620689655174"/>
         </collectionViewCell>
     </objects>
 </document>
