--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -109,4 +109,5 @@
             <point key="canvasLocation" x="512.79999999999995" y="-564.46776611694156"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.83649956089999999" green="0.1012616839" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
